--- a/client/src/Pages/Home/home.css
+++ b/client/src/Pages/Home/home.css
@@ -1,5 +1,10 @@
 .home {
   background: url('../../assets/images/homepage.jpg');
+  /* makes background responsive */
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .homePage {
