more css and added photos/social icons

--- a/client/src/Pages/About/about.css
+++ b/client/src/Pages/About/about.css
@@ -6,3 +6,15 @@
 .imgAbout {
   text-align: center;
 }
+
+.aboutTitle {
+  text-align: center;
+}
+.aboutBack {
+  background: url('../../assets/images/backgroundAbout.jpg');
+  /* makes background responsive */
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
