changed to one scroll page

--- a/client/src/Pages/Home/home.css
+++ b/client/src/Pages/Home/home.css
@@ -1,7 +1,7 @@
 .home {
   background: url('../../assets/images/homepage.jpg');
   /* makes background responsive */
-  height: 100vh;
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
